# project_radius

./: .gitignore  README.md  makefile  makefile_DEBUG  radius  version.md
const/: ds_baseline.json  ds_baseline_preset.json  ds_eeg.json  ds_fmnist.json  ds_fmnist2.json  ds_inputpos.json  ds_mnist.json  ds_move.json  ds_point.json  ds_radial.json  ds_tree.json  ds_weight.json
inc/: json.hpp
nts/: general.md  ideas.md  notes.md  runs.md
python/: defs.py  output.py  poisson_spike_train.py  randtest.py  randtest2.py  vis_acc_linesvert.py  vis_dendrite.py  vis_dendrite_002.py  vis_dendrite_004B.py  vis_dendrite_004C.py  vis_dendrite_beacon.py  vis_dendrite_eeg.py  vis_dendrite_linesvert.py  vis_dendrite_mnist.py  vis_dendrite_move.py  vis_dendrite_xor.py  vis_distance_matrix.py  vis_distance_matrix_002.py  vis_distance_matrix_004B.py  vis_distance_matrix_004C.py  vis_distance_matrix_beacon.py  vis_distance_matrix_mnist.py  vis_pattern_clustering.py  vis_plot_syndata.py  (+11 more)
src/: CMakeLists.txt  ProjectRadius.hpp.in  axon.hpp  builder.cpp  builder.hpp  config.cpp  config.hpp  connection.cpp  connection.hpp  data.hpp  error_matrix.cpp  error_matrix.hpp  exp_beacon.cpp  exp_beacon.hpp  exp_control.hpp  exp_eeg.cpp  exp_eeg.hpp  exp_move.cpp  exp_move.hpp  input_gen.cpp  input_gen.hpp  layer.cpp  layer.hpp  loader.cpp  loader.hpp  log.cpp  main.cpp  mnist_reader.cpp  mnist_reader.hpp  network.cpp  network.hpp  network_template.hpp  network_templates.cpp  neuron.cpp  neuron.hpp  neuron_template.cpp  neuron_template.hpp  neuron_type.cpp  neuron_type.hpp  pattern_builder.hpp  (+27 more)
(+101 files in other folders)
